<resources>
    <string name="app_name">CookNation</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="profile_name">Profile name</string>
    <string name="welcome_message">Welcome to\nCookNation</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="select">Select img</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="upload">Upload</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floatText">floatText</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_scrolling_test">ScrollingActivityTest</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efficient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="lorem_ipsum_list">- Lorem ipsum dolor sit amet\n- consetetur sadipscing elitr\n- sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat\n- sed diam voluptua\n- At vero eos et accusam et justo duo dolores et ea rebum\n- Stet clita kasd gubergren\n- no sea takimata sanctus est Lorem ipsum dolor sit amet</string>
    <string name="author">Author</string>
    <string name="no_reviews">(0)</string>
    <string name="date">Date</string>
    <string name="recipe_img">Recipe Img</string>
    <string name="image_of_recipe">Image of Recipe</string>
    <string name="icon_for_fav_button">Icon for fav-Button</string>
    <string name="edit_button">Edit-Button</string>
    <string name="delete_button">Delete-Button</string>
    <string name="username">Username</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="cooknation">Cooknation™</string>
    <string name="logo_in_splash_screen">Logo in Splash Screen</string>
    <string name="icon_for_edit_button">Icon for Edit Button</string>
    <string name="preview_for_image_selection">Preview for image selection</string>
    <string name="icon_for_image_selection">Icon for image selection</string>
    <string name="edit">Edit</string>
    <string name="save">save</string>
    <string name="web_view_button" />
    <string name="upload_in_profile">+ Upload</string>
    <string name="my_uploads">My Uploads</string>
    <string name="popup_slider">☰</string>
    <string name="difficulty">Difficulty</string>
    <string name="your_bookmarked_recipes">Your bookmarked recipes</string>
    <string name="our_favorite_recipes_this_week">Our favorite recipes this week</string>
    <string name="no_bookmarks">You have no bookmarked recipes yet. ☹\n\n Bookmark a recipe to view it even when you\'re offline!</string>
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
    <string-array name="prepTimes">
        <item>ca. 15 min</item>
        <item>ca. 30 min</item>
        <item>ca. 60 min</item>
        <item>60+ min</item>
    </string-array>
</resources>