<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textSize="40sp"
            android:textColor="#000"
            android:fontFamily="@font/lora_semi_bold"
            android:gravity="center"
            android:text="@string/upload"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:contentDescription="@string/preview_for_image_selection"
                android:id="@+id/ibPreview"
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:layout_centerHorizontal="true"
                android:background="#E0E0E0" />

            <ImageView
                android:contentDescription="@string/icon_for_image_selection"
                android:id="@+id/ivPhotoIcon"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_add_a_photo_24" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="9dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiDirections"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="9dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDirections"
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:hint="@string/directions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiIngredients"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="9dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIngredients"
                android:layout_width="match_parent"
                android:layout_height="151dp"
                android:hint="@string/ingredients"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUpload"
            android:layout_gravity="center"
            android:layout_width="230dp"
            android:layout_height="52dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#ff15"
            android:text="@string/upload"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>