<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".M4x1profile">

        <ImageButton
            android:contentDescription="@string/webview_impressum_button"
            android:id="@+id/ibButtonImpressum"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:backgroundTint="@color/purple_500"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_food_bank_24"/>

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/sign_out"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:contentDescription="@string/profile_picture"
            android:id="@+id/ivProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfilePic"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:scaleX="2"
            android:scaleY="2"
            android:text="" />

        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/btnProfileUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProfileName"
            android:layout_centerHorizontal="true"
            android:text="@string/upload" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProfileRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnProfileUpload" />

    </RelativeLayout>
</ScrollView>