<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp">

        <RelativeLayout
            android:id="@+id/llCardCell"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/ivRecipeImg"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/recipe_img"
                android:scaleType="centerCrop"
                android:src="@drawable/buffer" />

            <TextView
                android:id="@+id/tvRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ivRecipeImg"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/recipe_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRecipeName"
                android:layout_toRightOf="@id/mrbCardAvgRating"
                android:gravity="center"
                android:lines="1"
                android:text="@string/author"
                android:textColor="#404040"
                android:textSize="21sp" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/mrbCardAvgRating"
                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvRecipeName"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="0.1"
                app:mrb_fillBackgroundStars="false"
                app:mrb_progressTint="@android:color/white"
                app:mrb_secondaryProgressTint="@android:color/white" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>